--- a/ProAcc/ProAcc.csproj
+++ b/ProAcc/ProAcc.csproj
@@ -561,8 +561,6 @@
     <Content Include="Views\ProjectInstanceConfigs\Edit.cshtml" />
     <Content Include="Views\ProjectInstanceConfigs\Index.cshtml" />
     <Content Include="Views\Home\Home.cshtml" />
-    <Content Include="Views\Customers\_Customercreate.cshtml" />
-    <Content Include="Views\Customers\_Consultantcreate.cshtml" />
     <Content Include="Views\Assessment\ActivitieReport.cshtml" />
     <Content Include="Views\Assessment\FioriAppsReport.cshtml" />
     <Content Include="Views\Test\CommingSoon.cshtml" />
@@ -585,6 +583,8 @@
     <Content Include="Views\PhaseMaster\_TeamCreate.cshtml" />
     <Content Include="Views\PhaseMaster\_TeamIndex.cshtml" />
     <Content Include="Views\ProjectMonitor\PMAdminCreate.cshtml" />
+    <Content Include="Views\Customers\_Customercreate.cshtml" />
+    <Content Include="Views\Customers\_CustomerIndex.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
