--- a/ProAcc/ProAcc.csproj
+++ b/ProAcc/ProAcc.csproj
@@ -519,6 +519,7 @@
     <Compile Include="BL\Model\SAPInput_SimplificationReport.cs" />
     <Compile Include="BL\Model\UserModel.cs" />
     <Compile Include="BL\Model\UserRoleProvider.cs" />
+    <Compile Include="Controllers\AssessmentController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -526,6 +527,7 @@
     <Compile Include="BL\DBHelper.cs" />
     <Compile Include="BL\Model\Common.cs" />
     <Compile Include="Controllers\TestController.cs" />
+    <Compile Include="Controllers\asdadUserController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -585,6 +587,14 @@
     <Content Include="Views\ProjectMonitor\PMAdminCreate.cshtml" />
     <Content Include="Views\Customers\_Customercreate.cshtml" />
     <Content Include="Views\Customers\_CustomerIndex.cshtml" />
+    <Content Include="Views\Userasdad\Create.cshtml" />
+    <Content Include="Views\Userasdad\Delete.cshtml" />
+    <Content Include="Views\Userasdad\Details.cshtml" />
+    <Content Include="Views\Userasdad\Edit.cshtml" />
+    <Content Include="Views\Userasdad\Index.cshtml" />
+    <Content Include="Views\Userasdad\_UserCreate.cshtml" />
+    <Content Include="Views\User\CreateUsers.cshtml" />
+    <Content Include="Views\Customers\_UserCreate.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
