--- a/ProACC_DB/ProACC_DB.csproj
+++ b/ProACC_DB/ProACC_DB.csproj
@@ -102,6 +102,9 @@
     <Compile Include="SP_ReadinessReport_Result.cs">
       <DependentUpon>ProAcc_DB_Entity.tt</DependentUpon>
     </Compile>
+    <Compile Include="StatusMaster.cs">
+      <DependentUpon>ProAcc_DB_Entity.tt</DependentUpon>
+    </Compile>
     <Compile Include="UserMaster.cs">
       <DependentUpon>ProAcc_DB_Entity.tt</DependentUpon>
     </Compile>
