Mioodifications in customer and activity

--- a/ProACC_DB/ProACC_DB.csproj
+++ b/ProACC_DB/ProACC_DB.csproj
@@ -59,6 +59,9 @@
     <Compile Include="HanaStatu.cs">
       <DependentUpon>ProAcc_DB_Entity.tt</DependentUpon>
     </Compile>
+    <Compile Include="IndustrySector.cs">
+      <DependentUpon>ProAcc_DB_Entity.tt</DependentUpon>
+    </Compile>
     <Compile Include="Instance.cs">
       <DependentUpon>ProAcc_DB_Entity.tt</DependentUpon>
     </Compile>
