Return URL And Bundling

--- a/ProAcc/ProAcc.csproj
+++ b/ProAcc/ProAcc.csproj
@@ -157,10 +157,10 @@
     <Content Include="Asset\css\Menu.css" />
     <Content Include="Asset\css\main_Login.css" />
     <Content Include="Asset\css\style.css" />
-    <Content Include="Asset\fonts\fa-solid-900.svg" />
-    <Content Include="Asset\fonts\font-awesome-4.7.0\css\font-awesome.css" />
-    <Content Include="Asset\fonts\font-awesome-4.7.0\css\font-awesome.min.css" />
-    <Content Include="Asset\fonts\Pe-icon-7-stroke.svg" />
+    <Content Include="Content\fonts\fa-solid-900.svg" />
+    <Content Include="Content\fonts\font-awesome-4.7.0\css\font-awesome.css" />
+    <Content Include="Content\fonts\font-awesome-4.7.0\css\font-awesome.min.css" />
+    <Content Include="Content\fonts\Pe-icon-7-stroke.svg" />
     <Content Include="Asset\images\11.png" />
     <Content Include="Asset\images\1Promantus_logo.png" />
     <Content Include="Asset\images\22.png" />
@@ -428,13 +428,13 @@
     <Content Include="Content\Theme\jquery-ui.min.css" />
     <Content Include="Content\ui.jqgrid.css" />
     <Content Include="Global.asax" />
-    <Content Include="Asset\fonts\fa-solid-900.eot" />
-    <Content Include="Asset\fonts\fa-solid-900.ttf" />
-    <Content Include="Asset\fonts\fa-solid-900.woff" />
-    <Content Include="Asset\fonts\fa-solid-900.woff2" />
-    <Content Include="Asset\fonts\Pe-icon-7-stroke.eot" />
-    <Content Include="Asset\fonts\Pe-icon-7-stroke.ttf" />
-    <Content Include="Asset\fonts\Pe-icon-7-stroke.woff" />
+    <Content Include="Content\fonts\fa-solid-900.eot" />
+    <Content Include="Content\fonts\fa-solid-900.ttf" />
+    <Content Include="Content\fonts\fa-solid-900.woff" />
+    <Content Include="Content\fonts\fa-solid-900.woff2" />
+    <Content Include="Content\fonts\Pe-icon-7-stroke.eot" />
+    <Content Include="Content\fonts\Pe-icon-7-stroke.ttf" />
+    <Content Include="Content\fonts\Pe-icon-7-stroke.woff" />
     <Content Include="bin\ProAcc.dll.config" />
     <Content Include="bin\ProACC_DB.dll.config" />
     <Content Include="bin\Release\Publish\Asset\fonts\fa-solid-900.eot" />
