Assessment And report

--- a/ProACC_DB/ProACC_DB.csproj
+++ b/ProACC_DB/ProACC_DB.csproj
@@ -56,6 +56,9 @@
     <Compile Include="Customer.cs">
       <DependentUpon>ProAcc_DB_Entity.tt</DependentUpon>
     </Compile>
+    <Compile Include="FileUploadMaster.cs">
+      <DependentUpon>ProAcc_DB_Entity.tt</DependentUpon>
+    </Compile>
     <Compile Include="HanaStatu.cs">
       <DependentUpon>ProAcc_DB_Entity.tt</DependentUpon>
     </Compile>
