--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -74,6 +74,14 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Spire.License" publicKeyToken="b1144360237c8b3f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.7.40" newVersion="1.3.7.40" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Spire.Pdf" publicKeyToken="663f351905198cb3" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.11.0.2040" newVersion="5.11.0.2040" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
