--- a/ProAcc/packages.config
+++ b/ProAcc/packages.config
@@ -5,6 +5,7 @@
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net452" />
+  <package id="FreeSpire.Doc" version="7.11.0" targetFramework="net452" />
   <package id="jQuery" version="1.7.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
