--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -31,8 +31,12 @@
         <add name="userRoleProvider" type="ProAcc.BL.Model.UserRoleProvider" />
       </providers>
     </roleManager>
+    <!--mode="RemoteOnly"-->
+    <customErrors mode="On" defaultRedirect="~/Error/" redirectMode="ResponseRedirect">
+      <error statusCode="404" redirect="~/login/login/" />
+    </customErrors>
   </system.web>
-
+  
   <connectionStrings>
     <!--ProAccDevNew-->
     
