--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -32,7 +32,7 @@
       </providers>
     </roleManager>
     <!--mode="RemoteOnly"-->
-    <customErrors mode="On" defaultRedirect="~/Error/" redirectMode="ResponseRedirect">
+    <customErrors mode="On" defaultRedirect="~/ErrorLog/Error404" redirectMode="ResponseRedirect">
       <error statusCode="404" redirect="~/login/login/" />
     </customErrors>
   </system.web>
