--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -22,8 +22,10 @@
     <add key="Mail_Client" value="smtp.gmail.com" />
     <add key="Mail_UserName" value="manojrmbytest@gmail.com" />
     <add key="Mail_Password" value="manojtest" />
+    <!--<add key="Mail_UserName" value="promantustestingteamblg@gmail.com" />
+    <add key="Mail_Password" value="Asd123!@#" />-->
     <add key="Mail_Port" value="587" />
-    <add key="Mail_SSL" value="false" />
+    <add key="Mail_SSL" value="true" />
     
     
   </appSettings>
