Design and Audit report

--- a/ProAcc/ProAcc.csproj
+++ b/ProAcc/ProAcc.csproj
@@ -666,6 +666,7 @@
     <Content Include="Views\Resource\ResourceConversion.cshtml" />
     <Content Include="Views\ProjectMonitor\ConvertionMonitor.cshtml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
+    <Content Include="Views\Report\AuditReports.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
