--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /ProAcc/Asset/Log
 /ProAcc/Asset/css/Loader.css
 /.vscode/tasks.json
+/ProAcc/Views/ProjectMonitor/AssessmentMonitor - Copy.cshtml
