--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -22,11 +22,16 @@
     <add key="Mail_Client" value="smtp.gmail.com" />
     <add key="Mail_UserName" value="manojrmbytest@gmail.com" />
     <add key="Mail_Password" value="manojtest" />
-    <add key="Mail_CheckInterval" value="3600000" />
+    <add key="Mail_FolderPath" value="~/Asset/MailTemplate/" />
+    <!--<add key="Mail_CheckInterval" value="3600000" />-->
+    <add key="Mail_CheckInterval" value="10000" />
     <!--<add key="Mail_UserName" value="promantustestingteamblg@gmail.com" />
     <add key="Mail_Password" value="Asd123!@#" />-->
     <add key="Mail_Port" value="587" />
     <add key="Mail_SSL" value="true" />
+    <add key="Mail_EnableTest" value="true" />
+    <add key="Mail_TestToID" value="manojrmby@gmail.com" />
+    
     
     
   </appSettings>
