--- a/ProAcc/packages.config
+++ b/ProAcc/packages.config
@@ -1,21 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
+  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net452" />
   <package id="ClosedXML" version="0.95.0" targetFramework="net452" />
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net452" />
   <package id="FreeSpire.Doc" version="7.11.0" targetFramework="net452" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net452" />
   <package id="jQuery" version="1.7.2" targetFramework="net452" />
+  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net452" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net452" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="MySql.Data" version="8.0.20" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="popper.js" version="1.16.1" targetFramework="net452" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net452" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
