--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -30,7 +30,8 @@
     <add key="Mail_Port" value="587" />
     <add key="Mail_SSL" value="true" />
     <add key="Mail_EnableTest" value="true" />
-    <add key="Mail_TestToID" value="manojrmby@gmail.com" />
+    <!--<add key="Mail_TestToID" value="manojrmby@gmail.com" />-->
+    <add key="Mail_TestToID" value="gokul@promantus.com" />
     
     
     
