--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -19,9 +19,14 @@
     <add key="Upload_filePath_Temp" value="~/Asset/UploadedFiles/Temp" />
     
     <!--Mail Settings-->
-    <add key="Mail_Client" value="smtp.gmail.com" />
+    <!--<add key="Mail_Client" value="smtp.gmail.com" />
     <add key="Mail_UserName" value="manojrmbytest@gmail.com" />
-    <add key="Mail_Password" value="manojtest" />
+    <add key="Mail_Password" value="manojtest" />-->
+
+    <add key="Mail_Client" value="smtp.office365.com" />
+    <add key="Mail_UserName" value="ProAccelerator@promantus.com" />
+    <add key="Mail_Password" value="proacc@123" />
+    
     <add key="Mail_FolderPath" value="~/Asset/MailTemplate/" />
     <!--<add key="Mail_CheckInterval" value="3600000" />-->
     <add key="Mail_CheckInterval" value="10000" />
@@ -30,11 +35,11 @@
     <add key="Mail_Port" value="587" />
     <add key="Mail_SSL" value="true" />
     <add key="Mail_EnableTest" value="true" />
-    <!--<add key="Mail_TestToID" value="manojrmby@gmail.com" />-->
-    <add key="Mail_TestToID" value="gokul@promantus.com" />
+    <add key="Mail_TestToID" value="manogekumar@promantus.com" />
+    <!--<add key="Mail_TestToID" value="gokul@promantus.com" />-->
+
     
-    
-    
+
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
