--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -34,8 +34,8 @@
     <add key="Mail_Password" value="Asd123!@#" />-->
     <add key="Mail_Port" value="587" />
     <add key="Mail_SSL" value="true" />
-    <add key="Mail_EnableTest" value="true" />
-    <add key="Mail_TestToID" value="manogekumar@promantus.com" />
+    <add key="Mail_EnableTest" value="false" />
+    <!--<add key="Mail_TestToID" value="akhil@promantus.com" />-->
     <!--<add key="Mail_TestToID" value="gokul@promantus.com" />-->
 
     
